WIP debug sync lock
This version locks the start and then runs channel estimation 3 times. It seems to work well
TODO: pkt

--- a/host/osla-host/README
+++ b/host/osla-host/README
@@ -9,8 +9,7 @@ currently installed on the current machine.
 To try it out, run these commands:
 $ mkdir build/ # Creates a new build directory
 $ cd build/
-$ cmake -DCMAKE_INSTALL_PREFIX=/home/user/.local/lib/uhd-4.0 ../
-$or cmake -DCMAKE_INSTALL_PREFIX=/n/houghton/z/wangston/.local/lib/uhd-4.5 ../
+$ cmake -DCMAKE_INSTALL_PREFIX=$HOME/.local/lib/uhd-4.5 ../ //Makes sure that uhd libraries can be found
 $ make
 
 This will find the UHD libraries, and link and compile the example
